# opengtm

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  floom.json  pyproject.toml  requirements.txt
api/: index.py
docs/: icp-scoring.md  message-frameworks.md  pipeline.md
examples/: full-pipeline.py  qualify-leads.py
opengtm/: __init__.py  analytics.py  blog.py  cli.py  context.py  discover.py  keywords.py  message.py  outreach.py  qualify.py  research.py  sitemap.py  sync.py
skills/: cold-outreach.md
