[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "opengtm"
version = "0.1.0"
description = "AI-powered GTM automation: discover leads, research prospects, score ICP fit, generate outreach. Built for Claude Code users."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Federico De Ponte", email = "depontefede@gmail.com" }
]
keywords = [
    "gtm", "lead-generation", "outreach", "sales-automation",
    "ai-automation", "claude-code", "prospect-research", "icp-scoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.10"
dependencies = [
    "google-generativeai==0.8.5",
    "requests==2.32.3",
    "click==8.1.8",
    "python-dotenv==1.0.1",
]

[project.urls]
Homepage = "https://github.com/federicodeponte/opengtm"
Repository = "https://github.com/federicodeponte/opengtm"
Issues = "https://github.com/federicodeponte/opengtm/issues"

[project.scripts]
opengtm = "opengtm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opengtm*"]
